# dev-management-app

./: .env.example  .gitignore  DEVELOPMENT_RULES.md  README.md  app.py  forms.py  models.py  pyproject.toml  requirements.txt  seed.py
doc/: Information.md  test-report.md
migrations/versions/: 22450b75200a_add_department_yearly_budgets.py  4f9f41f6e331_make_project_planned_start_date_required.py  70df74dfd081_add_project_reports.py  88311347dd34_refactor_db_models_for_issue_6.py  ae9655238863_add_planned_dates_to_project_drafts.py  bc57f288a677_create_initial_tables.py  c7696b33bebe_add_monthly_report_updated_at_to_.py  f833bd041280_add_department_members_and_task_.py  fe3369ab0de5_add_project_last_progress_update_fields.py
static/css/: base.css  components.css  design-tokens.css  layout.css  responsive.css  themes.css
static/js/: app.js
templates/: applicant_project_confirm.html  applicant_project_new.html  applicant_project_progress.html  applicant_project_progress_empty.html  applicant_project_status.html  applicant_top.html  base.html  hq_project_final_review.html  hq_project_final_review_empty.html  hq_top.html  hq_top_empty.html  login.html  manager_project_monitoring.html  manager_project_monitoring_empty.html  manager_project_review.html  manager_project_review_empty.html  manager_top.html  sample_applicant_dashboard.html  sample_hq_dashboard.html  sample_manager_dashboard.html  ui-kit-dashboard.html  ui-kit.html
templates/partials/: _approval_steps.html  _content_footer.html  _empty_state.html  _flash.html  _header.html  _mobile_drawer.html  _modal.html  (+2 more)
(+4 files in other folders)
